# ZeroCostDL4Mic

./: .gitignore  .gitmodules  Colab_notebooks  Dockerfile  LICENSE  Makefile  N2V.ipynb  README.md  U_Net_3D_ZeroCostDL4Mic.ipynb  construct.yaml  environment.yml  manifest.bioimage.io.yaml  minimal.ipynb  pyproject.toml  requirements.txt
.binder/: Dockerfile  README.md  __Dockerfile  __Dockerfile.bkup  activate_conda.sh  daemon.json  environment.yml  environment_tf_1.yml  install_miniforge.sh  meh_Dockerfile  postBuild  postBuildAdmin  requirements.txt  start
BioimageModelZoo/: README.md
ColabNoteBooks/: Lucas CSBDeep 2D_3D.ipynb
ColabNotebooks/: CARE_2D_ZeroCostDL4Mic.ipynb  Noise2Void_2D_ZeroCostDL4Mic.ipynb
Colab_notebooks/: 3D_RCAN_ZeroCostDL4Mic.ipynb  Artificial labelling (fnet).ipynb  Artificial_labelling_fnet_v1.ipynb  Artificial_labelling_fnet_v3.ipynb  Artificial_labelling_fnet_v5.ipynb  CARE_2D_ZeroCostDL4Mic.ipynb  CARE_2D_v10.ipynb  CARE_2D_v11.ipynb  CARE_2D_v12.ipynb  CARE_2D_v13.ipynb  CARE_3D_ZeroCostDL4Mic.ipynb  CARE_3D_v11.ipynb  CARE_3D_v12.ipynb  CARE_3D_v13.ipynb  Cellpose_2D_ZeroCostDL4Mic.ipynb  ChangeLog.txt  CycleGAN_ZeroCostDL4Mic.ipynb  DFCAN_ZeroCostDL4Mic.ipynb  DRMIME_2D_ZeroCostDL4Mic.ipynb  DecoNoising_2D_ZeroCostDL4Mic.ipynb  Deep-STORM_2D_ZeroCostDL4Mic.ipynb  DenoiSeg_ZeroCostDL4Mic.ipynb  Detectron2_2D_ZeroCostDL4Mic.ipynb  Diffusion_Model_SMLM_ZeroCostDL4Mic.ipynb  Diffusion_Model_for_SMLM_ZeroCostDL4Mic.ipynb  Diffusion_Model_for_SMLM_v1_2.ipynb  Diffusion_Model_for_SMLM_v1_3.ipynb  EmbedSeg_2D_ZeroCostDL4Mic.ipynb  (+50 more)
(+157 files in other folders)
