[tool.poetry]
name = "dl4mic"
version = "0.1.0"
description = ""
authors = ["Craig  <ctr26@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
tifffile = "^2021.4.8"
pandas = "^1.2.4"
scipy = "^1.6.3"
scikit-learn = "^0.24.2"
scikit-image = "^0.18.1"
astropy = "^4.2.1"
fpdf = "^1.7.2"
wget = "^3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
n2v = "^0.2.1"
keras = ">=2.2.4,<2.3.0"
Theano = "^1.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
